--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; Orichami Inc.</span>
+						<span class="copyright">&copy; Orichami 2024</span>
 					</footer>
 
 			</div>
