--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Orichami</h1>
-						<p>Origami &nbsp;&bull;&nbsp; Grow &nbsp;&bull;&nbsp; Collect</p>
+						<p>Grow &nbsp;&bull;&nbsp; Collect &nbsp;&bull;&nbsp; Trade</p>
 						<nav>
 							<ul>
 								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
