add favicon support for apple

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="assets/css/images/favicon.png" type="image/png">
+		<!-- Apple Touch Icon for Safari -->
+		<link rel="apple-touch-icon" href="assets/css/images/favicon.png">
+		<!-- Optional: Specify sizes for Apple devices (like the home screen icon) -->
+		<link rel="apple-touch-icon" sizes="180x180" href="favicon-180x180.png">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
