--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link rel="icon" href="assets/css/images/favicon.png" type="image/png">
 		<!-- Apple Touch Icon for Safari -->
 		<link rel="apple-touch-icon" href="assets/css/images/favicon.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="assets/css/images/favicon-180x180.png">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
