--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<!-- Apple Touch Icon for Safari -->
 		<link rel="apple-touch-icon" href="assets/css/images/favicon.png">
 		<link rel="apple-touch-icon" sizes="180x180" href="assets/css/images/favicon-180x180.png">
-		<link rel="mask-icon" href="assets/css/images/favicon.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="assets/css/images/favicon-152x152.png">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
