--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="assets/css/images/favicon.png" type="image/png">
+		<link rel="shortcut icon" href="assets/css/images/favicon.png" type="image/png">
 		<!-- Apple Touch Icon for Safari -->
 		<link rel="apple-touch-icon" href="assets/css/images/favicon.png">
 		<link rel="apple-touch-icon" sizes="180x180" href="assets/css/images/favicon-180x180.png">
