--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 		<title>Orichami</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" href="assets/css/images/favicon.png" type="image/png">
-		<link rel="icon" sizes="32x32" href="assets/css/images/favicon-32x32.png" type="image/png">
-		<link rel="shortcut icon" href="assets/css/images/favicon.png" type="image/png">
+		<link rel="stylesheet" href="/assets/css/main.css" />
+		<link rel="icon" href="/assets/css/images/favicon.png" type="image/png">
+		<link rel="icon" sizes="32x32" href="/assets/css/images/favicon-32x32.png" type="image/png">
+		<link rel="shortcut icon" href="/assets/css/images/favicon.png" type="image/png">
 		<!-- Apple Touch Icon for Safari -->
-		<link rel="apple-touch-icon" href="assets/css/images/favicon.png" type="image/png">
-		<link rel="apple-touch-icon" sizes="180x180" href="assets/css/images/favicon-180x180.png" type="image/png">
-		<link rel="apple-touch-icon" sizes="152x152" href="assets/css/images/favicon-152x152.png" type="image/png">
-		<link rel="apple-touch-icon" sizes="48x48" href="assets/css/images/favicon-48x48.png" type="image/png">
-		<link rel="apple-touch-icon" sizes="32x32" href="assets/css/images/favicon-32x32.png" type="image/png">
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="apple-touch-icon" href="/assets/css/images/favicon.png" type="image/png">
+		<link rel="apple-touch-icon" sizes="180x180" href="/assets/css/images/favicon-180x180.png" type="image/png">
+		<link rel="apple-touch-icon" sizes="152x152" href="/assets/css/images/favicon-152x152.png" type="image/png">
+		<link rel="apple-touch-icon" sizes="48x48" href="/assets/css/images/favicon-48x48.png" type="image/png">
+		<link rel="apple-touch-icon" sizes="32x32" href="/assets/css/images/favicon-32x32.png" type="image/png">
+		<noscript><link rel="stylesheet" href="/assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 		<div id="wrapper">
