--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 		<title>Orichami</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		
+		<!-- Favicons -->
+		<link rel="icon" href="/favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="/assets/css/main.css" />
 		<link rel="icon" href="/assets/css/images/favicon.png" type="image/png">
 		<link rel="icon" sizes="32x32" href="/assets/css/images/favicon-32x32.png" type="image/png">
