rearrange favicon section

--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE HTML>
-<html>
-	<head>
+	<html>
+		<head>
 		<title>Orichami</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="/assets/css/main.css" />
 		
-		<!-- Favicons -->
+		<!-- Primary Favicon -->
 		<link rel="icon" href="/favicon.ico" type="image/x-icon">
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-		<link rel="stylesheet" href="/assets/css/main.css" />
-		<link rel="icon" href="/assets/css/images/favicon.png" type="image/png">
-		<link rel="icon" sizes="32x32" href="/assets/css/images/favicon-32x32.png" type="image/png">
-		<link rel="shortcut icon" href="/assets/css/images/favicon.png" type="image/png">
-		<!-- Apple Touch Icon for Safari -->
-		<link rel="apple-touch-icon" href="/assets/css/images/favicon.png" type="image/png">
-		<link rel="apple-touch-icon" sizes="180x180" href="/assets/css/images/favicon-180x180.png" type="image/png">
-		<link rel="apple-touch-icon" sizes="152x152" href="/assets/css/images/favicon-152x152.png" type="image/png">
-		<link rel="apple-touch-icon" sizes="48x48" href="/assets/css/images/favicon-48x48.png" type="image/png">
-		<link rel="apple-touch-icon" sizes="32x32" href="/assets/css/images/favicon-32x32.png" type="image/png">
+		
+		<!-- PNG Favicon for Modern Browsers -->
+		<link rel="icon" type="image/png" sizes="32x32" href="/assets/css/images/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/assets/css/images/favicon-16x16.png">
+		
+		<!-- Apple Touch Icons for iOS and Safari -->
+		<link rel="apple-touch-icon" href="/assets/css/images/apple-touch-icon.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="/assets/css/images/apple-touch-icon-180x180.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="/assets/css/images/apple-touch-icon-152x152.png">
+		<link rel="apple-touch-icon" sizes="48x48" href="/assets/css/images/apple-touch-icon-48x48.png">
+		<link rel="apple-touch-icon" sizes="32x32" href="/assets/css/images/apple-touch-icon-32x32.png">
+		
 		<noscript><link rel="stylesheet" href="/assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
