--- a/index.html
+++ b/index.html
@@ -7,19 +7,18 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		
 		<!-- Primary Favicon -->
-		<link rel="icon" href="favicon.ico" type="image/x-icon">
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+		<link rel="icon" type="image/x-icon" href="favicon.ico" >
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" >
 		
 		<!-- PNG Favicon for Modern Browsers -->
+		<link rel="icon" type="image/png" href="assets/css/images/favicon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="assets/css/images/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="assets/css/images/favicon-16x16.png">
 		
 		<!-- Apple Touch Icons for iOS and Safari -->
-		<link rel="apple-touch-icon" href="assets/css/images/apple-touch-icon.png">
-		<link rel="apple-touch-icon" sizes="180x180" href="assets/css/images/apple-touch-icon-180x180.png">
-		<link rel="apple-touch-icon" sizes="152x152" href="assets/css/images/apple-touch-icon-152x152.png">
-		<link rel="apple-touch-icon" sizes="48x48" href="assets/css/images/apple-touch-icon-48x48.png">
-		<link rel="apple-touch-icon" sizes="32x32" href="assets/css/images/apple-touch-icon-32x32.png">
+		<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="assets/css/images/favicon-180x180.png">
+		<link rel="apple-touch-icon" type="image/png" sizes="152x152" href="assets/css/images/favicon-152x152.png">
+		<link rel="apple-touch-icon" type="image/png" sizes="48x48" href="assets/css/images/favicon-48x48.png">
+		<link rel="apple-touch-icon" type="image/png" sizes="32x32" href="assets/css/images/favicon-32x32.png">
 		
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
